# dbmanager

./: .gitignore  AGENT.md  CHANGELOG.md  PROGRESS_LOG.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test-bookmarks.js  test-cloud-sync.js  test-diagnose.js  test-explain.js  test-feishu.js  test-index-advisor.js  test-nl2sql.js  test-optimizer.js  test-run.js  test-sql-fixer.js  test-template-manager.js  test-v0.5.0-complete.js  test-v0.6.0-complete.js  test-v0.7.0-complete.js  test-v0.8.0-phase1.js  test-v0.8.0-phase2-5.js  test.sql  tsconfig.json  verify1.js  verify2.js  verify3.js
.claude/: README.md  settings.json  settings.local.json
docs/: AI_ASSISTANT.md  ARCHITECTURE.md  AUTOCOMPLETE.md  CHANGELOG.md  COMPARE.md  DEV_v0.4.0.md  DEV_v0.5.0-day1.md  DEV_v0.5.0-day2.md  DEV_v0.5.0.md  DEV_v0.7.0_phase1.md  DEV_v0.9.0_phase2.md  DEV_v0.9.0_phase3.md  DEV_v1.0.0_phase1.md  DEV_v1.1.0_phase1.md  ERD.md  FUTURE_VERSIONS.md  IMPORT_EXPORT.md  INCREMENTAL_SYNC.md  PHASE3_TASKS.md  PHASE4_v0.6.0.md  PHASE5_v0.7.0.md  PHASE6_v0.8.0.md  PHASE7_v0.9.0.md  PHASE8_v1.0.0.md  PHASE9_v1.1.0.md  PLAN_2026_Q2.md  PROJECT_SUMMARY.md  QUERY.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.7.0.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md  RELEASE_v1.0.0.md  RELEASE_v1.1.0.md  RELEASE_v1.2.0.md  RELEASE_v1.3.0.md  (+23 more)
examples/: users.sql
mobile/: .gitignore  App.tsx  README.md  app.json  package.json  test-v1.0.0-complete.js  test-v1.0.0-phase1.js  tsconfig.json
plugins/: example-plugin.ts
server/: api.ts  package.json
src/: __init__.py  main.py
tests/: setup.ts  test_batch.py  test_completer.py  test_completer_advanced.py  test_config.py  test_config_commands.py  test_config_features.py  test_desc_demo.py  test_explain.py  test_format_feature.py  test_highlighter.py  test_history_feature.py  test_integration.py  test_output.py  test_run_demo.py  test_run_feature.py  test_run_simple.py  test_transaction.py
web/: README.md  index.html  package.json  tailwind.config.js
(+152 files in other folders)
